# PlannerApp

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  seed_data.sql
src-tauri/src/: main.rs
src/components/: Clients.tsx  Dashboard.tsx  Drawer.tsx  ErrorBoundary.tsx  Knowledge.tsx  Layout.tsx  LoadingScreen.tsx  Notes.tsx  Opportunities.tsx  Projects.tsx  RAID.tsx  Settings.tsx  Sidebar.tsx  Tasks.tsx  TimeTracking.tsx  TopBar.tsx  drawer.tsx  topbar.tsx
src/lib/: utils.ts
src/store/: index.ts  mock.ts  utils.ts
src/types/: index.ts
